index.html Reorganized scoreboard into the final state. 2 divs left and right and 2 divs inside each of them named top and bot. To create a rectangular shape style.css Picked different and good looking colors. 3 colors and white looks pretty good, have to keep that in mind. Divs each had borders and because of that border width increased. Used border: none and border left, top etc. spesific commands to fix that. if i want to stretch the items inside the flex-container i should use align-items: stretch feature.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: #403F4C;
+    background-color: #C9F0FF;
 }
 
 section{
@@ -12,34 +12,56 @@ section{
     padding: 20px;
     text-align: center;
     margin-bottom: 10px;
-    color: #3185FC;
+    color: #6B5E62;
     height: 100vh;
-
-
 }
 
 div {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #F9DC5C;
-    border: 10px solid #E84855;
+    background-color: #D5CAD6;
+    border: 10px solid #6B5E62;
     flex: 1;
-
 }
 
 button {
     height: 80px;
     width: 240px;
-    background-color: #3185FC;
-    color: #EFBCD5
+    background-color: #6B5E62;
+    color: #C9F0FF;
+}
 
+.roundBoard, .buttons {
+    font-size: 24px;
+    font-weight: bold;
+    color: #6B5E62;
+    border-top: none;
+}
+
+.scoreBoard{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
 
 }
 
-.roundBoard {
-    font-size: 24px;
-    font-weight: bold;
-    color: #3185FC;
+.left, .right{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border: none;
+    justify-content: space-around;
+}
 
+.top, .bot {
+    border: none;  
+}
+
+.left{
+    border-right: 10px solid #6B5E62;
+}
+
+.top{
+    border-bottom: 10px solid #6B5E62;
 }
